fix gap between community-section

--- a/src/styles/sections/landing/landing-community.scss
+++ b/src/styles/sections/landing/landing-community.scss
@@ -1,12 +1,13 @@
 .landing__community {
     margin-top: 13vh;
     background-image: url("/community-bg.png");
-    padding: 30vh 14%;
+    padding: 30vh 12%;
     background-size: contain;
 
     .community-header {
         display: flex;
         align-items: center;
+        justify-content: center;
 
         h1 {
             font-weight: 600;
@@ -18,6 +19,7 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: flex-start;
         gap: 15px;
         width: 100%;
 
