--- a/src/styles/sections/landing/landing-features.scss
+++ b/src/styles/sections/landing/landing-features.scss
@@ -22,4 +22,9 @@
             gap: 3vh;
         }
     }
+
+    .features-image img {
+        width: 100%;
+        object-fit: cover;
+    }
 }
